--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@livekit/components-react": "^2.9.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
